--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
